--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,15 @@
 {
     "java.configuration.updateBuildConfiguration": "interactive",
     "java.inlayHints.parameterNames.enabled": "none", 
+    "java.project.sourcePaths": [
+        "microservices-java/account-ms/"
+    ],
     "files.exclude": {
-        // ".gradle/": true,
-        // "gradle/": true,
-        // "**/build/": true,
-        // "**/bin/": true,
-        // "gradlew" : true,
-        // "gradlew.bat" : true,
+        "**/.gradle/": true,
+        "gradle/": true,
+        "**/build/": true,
+        "**/bin/": true,
+        "gradlew" : true,
+        "gradlew.bat" : true,
     }
 }
